[gd_scene load_steps=2 format=3 uid="uid://3vib02btu8jd"]

[ext_resource type="Script" path="res://src/debug_info.gd" id="1_ej1re"]

[node name="DebugInfo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ej1re")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2

[node name="Position" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Velocity" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="MovementState" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ActionState" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="Animation" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AnimationPath" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
